css/styles.css
:root {
  --color-primary: #2584ff;
  --color-secondary: #00d9ff;
  --color-accent: #ff3400;
  --color-headings: #1b0760;
  --color-body: #918ca4;
  --color-body-darker: #5c5577;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Typography */

html {
  font-size: 62.5%;
}

body {
  color: var(--color-body);
  font-family: "Inter", Arial, Helvetica, sans-serif;
  font-size: 2.4rem;
  line-height: 1.5;
}

p {
  margin-top: 0;
}

h1,
h2,
h3 {
  color: var(--color-headings);
  margin-bottom: 1rem;
  line-height: 1.1;
}

h1 {
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 3rem;
}

@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 4rem;
  }

  h3 {
    font-size: 2.4rem;
  }
}

/* Links */

a {
  text-decoration: none;
}

.link-arrow {
  color: var(--color-accent);
  font-size: 2rem;
  font-weight: 700;
  text-transform: uppercase;
}

.link-arrow::after {
  content: "-->";
  margin-left: 5px;
  transition: margin 0.15s;
}

.link-arrow:hover::after {
  margin-left: 10px;
}

@media screen and (min-width: 1024px) {
  .link-arrow {
    font-size: 1.5rem;
  }
}

/* Badges */

.badge {
  border-radius: 30px;
  font-size: 2rem;
  font-weight: 600;
  padding: 1rem 2rem;
  white-space: nowrap;
}

.badge--primary {
  background: var(--color-primary);
  color: #fff;
}

.badge--secondary {
  background: var(--color-secondary);
  color: #fff;
}

.badge--small {
  font-size: 1.6rem;
}

@media screen and (min-width: 1024px) {
  .badge {
    font-size: 1.5rem;
  }

  .badge--small {
    font-size: 1.2rem;
  }
}

/* Lists */

.list {
  list-style-type: none;
  padding-left: 0;
}

.list--inline .list__item {
  display: inline-block;
  margin-left: 2rem;
}

.list--tick {
  list-style-image: url(../images/tick.svg);
  padding-left: 3rem;
  color: var(--color-headings);
}

.list--tick .list__item {
  margin-bottom: 1rem;
  padding-left: 0.5rem;
}

@media screen and (min-width: 1024px) {
  .list--tick .list__item {
    padding-left: 0;
  }
}

/* Icons */

.icon {
  height: 40px;
  width: 40px;
}

.icon--primary {
  fill: var(--color-primary);
}

.icon--white {
  fill: #fff;
}

.icon--small {
  width: 30px;
}

.icon-container {
  align-items: center;
  background: #f3f9fa;
  border-radius: 100%;
  display: inline-flex;
  height: 64px;
  justify-content: center;
  width: 64px;
}

.icon-container--accent {
  background: var(--color-accent);
}

/* Buttons */

.btn {
  border-radius: 40px;
  border: 0;
  cursor: pointer;
  font-size: 1.8rem;
  font-weight: 600;
  margin: 1rem 0;
  padding: 2rem 3rem;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn .icon {
  width: 2rem;
  height: 2rem;
  vertical-align: middle;
  margin-right: 1px;
}

.btn--stretched {
  padding-left: 6rem;
  padding-right: 6rem;
}

.btn--block {
  display: inline-block;
  width: 100%;
}

.btn--primary {
  background: var(--color-primary);
  color: #fff;
}

.btn--secondary {
  background: var(--color-secondary);
  color: #fff;
}

.btn--accent {
  background: var(--color-accent);
  color: #fff;
}

.btn--outline {
  border: 2px solid var(--color-headings);
  color: var(--color-headings);
}

.btn--primary:hover {
  background: #3a8ffd;
}

.btn--secondary:hover {
  background: #00c8eb;
}

.btn--accent:hover {
  background: #ec3000;
}

.btn--outline:hover {
  background: var(--color-headings);
  color: #fff;
}

@media screen and (min-width: 1024px) {
  .btn {
    font-size: 1.4rem;
  }
}

/* Input */

.input {
  border-radius: 30px;
  border: 1px solid #ccc;
  color: var(--color-headings);
  font-size: 2rem;
  outline: none;
  padding: 1.5rem 3.5rem;
}

::placeholder {
  color: #cdcbd7;
}

.input-group {
  border: 1px solid #ccc;
  border-radius: 30px;
  display: flex;
}

.input-group .input {
  border: 0;
  flex-grow: 1;
  padding: 1.5rem 2rem;
  width: 0;
}

.input-group .btn {
  margin: 4px;
}

@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.5rem;
  }
}

/* Card */

.card {
  box-shadow: 0 0 30px 20px #e5ebed;
  border-radius: 10px;
  overflow: hidden;
}

.card__title,
.card__body {
  padding: 2rem 3rem;
}

.card--primary .card__title {
  background: var(--color-primary);
  color: #fff;
}

.card--secondary .card__title {
  background: var(--color-secondary);
  color: #fff;
}

.card--primary .badge--primary {
  background: #126de4;
}

.card--secondary .badge--secondary {
  background: #02cdf1;
}

/* Plans */

.plan {
  transition: transform 0.2s ease-out;
}

.plan__name {
  color: #fff;
  font-weight: 500;
  margin-top: 0;
  font-size: 2.4rem;
}

.plan__price {
  font-size: 6rem;
}

.plan__billing-cycle {
  opacity: 0.8;
  margin-right: 1rem;
  font-weight: 300;
  font-size: 2.4rem;
}

.plan__description {
  display: block;
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 1px;
}

.plan .list__item {
  margin-bottom: 2rem;
}

.plan:hover {
  transform: scale(1.05);
}

.plan--popular {
  transform: scale(1.1);
}

.plan--popular:hover {
  transform: scale(1.15);
}

.plan--popular .card__title {
  position: relative;
}

.plan--popular .plan__name::before {
  content: url(../images/popular.svg);
  width: 40px;
  display: inline-block;
  position: absolute;
  right: 3%;
  top: -6px;
}

@media screen and (min-width: 1024px) {
  .plan__name {
    font-size: 1.4rem;
  }

  .plan__price {
    font-size: 5rem;
  }

  .plan__billing-cycle {
    font-size: 1.6rem;
  }

  .plan__description {
    font-size: 1.7rem;
  }
}

/* Media Object */

.media {
  display: flex;
}

.media__title {
  margin-top: 0;
}

.media__body {
  margin: 0 2rem;
}

.media__image {
  margin-top: 1rem;
}

/* Quotes */

.quote {
  font-size: 3rem;
  font-style: italic;
  color: var(--color-body-darker);
  line-height: 1.3;
}

.quote__text::before {
  content: open-quote;
}

.quote__text::after {
  content: close-quote;
}

.quote__author {
  font-style: normal;
  margin-bottom: 0;
}
/* ... */

